# acpyconvolution

./: .gitignore  Cargo.toml  README.md  acpyconvolution.pyi  pyproject.toml
examples/: aclibrary.py  sample.py
src/: convolution.rs  lib.rs
src/modint/: mod.rs  modulo.rs  montgomery.rs  simd.rs
src/ntt/: cooley_tukey.rs  fft_cache.rs  gentleman_sande.rs  mod.rs  traits.rs  utility.rs
